# webots-ardupilot-autonomous-drone

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: autonomy_runtime.env.example  raspi_runtime.env.example  sitl_webots.env.example
docs/: autonomy-strategy.md  deployment-raspi.md  main-logic-map.md  mathematical-foundations.md  perception-contract.md  project-status.md  roadmap.md  run-simulation.md  sensor-fusion-and-altitude.md  setup-webots-ardupilot.md  simulation-audit.md  troubleshooting.md  tuning-guide.md  webots-source-sync.md  webots-yolo-pipeline.md
models/: README.md
models/model-debug/: model_debug.py
scripts/: probe_webots_camera.py  read_heartbeat.py  run_autonomy_sitl.sh  run_iris_camera_yolo.sh  run_raspi_hardware.sh  run_sitl_webots.sh
src/drone_autonomy/: __init__.py  cli.py  config.py
src/drone_autonomy/autonomy/: __init__.py  commands.py  mission.py
src/drone_autonomy/control/: __init__.py  altitude.py  filters.py  visual_servo.py
src/drone_autonomy/mavlink/: __init__.py  commands.py  connection.py  telemetry.py
tests/: test_altitude.py  test_cli.py  test_config.py  test_gate_mission.py  test_launcher_scripts.py  test_mavlink_command_adapter.py  test_mavlink_telemetry.py  test_synthetic_detector.py  test_target_selector.py  test_visual_servo.py  test_webots_camera.py  test_webots_yolo_provider.py  test_yolo_detector.py
webots/assets/: .gitkeep
webots/controllers/: .gitkeep
webots/protos/: .gitkeep  RobotstadiumGoal.proto
webots/worlds/: .gitkeep  iris_camera.wbt
(+16 files in other folders)
