[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webots-ardupilot-autonomy"
version = "0.1.0"
description = "Python companion autonomy stack for Webots, ArduPilot SITL, and staged Raspberry Pi deployment."
requires-python = ">=3.12"
dependencies = [
    "pymavlink>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
vision = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "ultralytics>=8.0",
]

[project.scripts]
drone-autonomy = "drone_autonomy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
